# flow_matching_toy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: flow_matching_simple_distribution.py  flow_matching_trainer.py  gen_image_using_flow_matcher.ipynb  main.py
src/flow_matching_toy/: data_sampler.py  model.py  models.py
src/flow_matching_toy/dataset/: datasets.py  fashion_mnist.py  spiral_distribution.py
src/flow_matching_toy/model/: __init__.py  mlp.py  models.py  time_embedding.py  time_encoder.py  unet.py
src/tools/: viz_data.py
tests/flow_matching_toy/: test_model.py  test_models.py  test_time_embedding.py
tests/model/: test_mlp.py  test_models.py  test_time_embedding.py  test_time_encoder.py  test_unet.py
