[project]
name = "flow-matching-toy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[[tool.uv.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[tool.pytest.ini_options]
# Specifies the directory where pytest will look for tests.
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".venv",
    "__pypackages__",
]
