[project]
name = "flow-matching-toy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core",
    "matplotlib",
    "numpy",
    "pytorch-lightning",
    "tensorboard",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.pytest.ini_options]
# Specifies the directory where pytest will look for tests.
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = [".git", ".pytest_cache", ".venv", "__pypackages__"]
